<resources>
    <string name="app_name">MySports</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="_don_t_have_an_account__string">Noch kein Account?</string>
    <string name="log_in_string">Einloggen</string>
    <string name="forgot_your_password__string">Passwort vergessen?</string>
    <string name="email_address_string"> Email-Adresse</string>
    <string name="date_from_hint">Start-Datum</string>
    <string name="date_end_hint">End-Datum</string>
    <string name="password_ek1_string"> Passwort</string>
    <string name="password_ek1_hint_string">Passwort wiederholen</string>
    <string name="mysport_string"><b>M</b>y<b>S</b>ports</string>
    <string name="quote_string">"Es gibt kein Medikament und keine Maßnahme, die einen vergleichbaren Effekt hat wie das körperliche Training. " \n\n- Prof. Dr. Wildor Hollmann \n(Internist und Sportmediziner)</string>
    <string name="figma_string">Figma</string>
    <string name="_42__string">42%</string>
    <string name="_9_42_am_string">9:42 AM</string>
    <string name="mysport_ek1_string">Willkommen bei <b>M</b>y<b>S</b>ports! Schön, dass Du da bist!</string>
    <string name="register_string">Registrieren</string>
    <string name="nachname_ek1_string">Nachname</string>
    <string name="vorname_ek1_string">Vorname</string>
    <string name="email_adresse_string">Email-Adresse</string>
    <string name="passwort_string">Passwort</string>
    <string name="passwort_wiederholen_string">Passwort wiederholen</string>
    <string name="figma_ek1_string">Figma</string>
    <string name="_42__ek1_string">42%</string>
    <string name="_9_42_am_ek1_string">9:42 AM</string>
    <string name="figma_ek2_string">Figma</string>
    <string name="_42__ek2_string">42%</string>
    <string name="_9_42_am_ek2_string">9:42 AM</string>
    <string name="figma_ek3_string">Figma</string>
    <string name="_42__ek3_string">42%</string>
    <string name="_9_42_am_ek3_string">9:42 AM</string>
    <string name="figma_ek4_string">Figma</string>
    <string name="_42__ek4_string">42%</string>
    <string name="_9_42_am_ek4_string">9:42 AM</string>
    <string name="titel_string">Ausdauertraining - Zusammenfassung</string>
    <string name="trainingszeit__string">Trainingszeit:</string>
    <string name="_00_12_23_string">00:12:23</string>
    <string name="skips__string">Skips:</string>
    <string name="_2_von_7_string">2 von 7</string>
    <string name="erhaltene_m_nzen__string">Erhaltene Mnzen: </string>
    <string name="erhaltene_belohnungen__string">Erhaltene Belohnungen: </string>
    <string name="_120_string">120</string>
    <string name="_2x_karten_teil_string">2x Karten-Teil</string>
    <string name="pers_nlicher_eindruck_des_workouts__string">Persnlicher Eindruck des Workouts:</string>
    <string name="dauer__string">Dauer: </string>
    <string name="intensit_t__string">Intensitt:</string>
    <string name="_bungen__string">bungen:</string>
    <string name="figma_ek5_string">Figma</string>
    <string name="_42__ek5_string">42%</string>
    <string name="_9_42_am_ek5_string">9:42 AM</string>
    <string name="ausdauer_string">Ausdauer</string>
    <string name="kraft_ek1_string">Kraft</string>
    <string name="_11_aktive_tage__von_23___das_sind_fast_50___weiter_so__string">Tipp: Konzentriere Dich heute auf Ausdauer-Aktivitten, fr ein ausgeglichenes Training.</string>
    <string name="figma_ek6_string">Figma</string>
    <string name="_42__ek6_string">42%</string>
    <string name="_9_42_am_ek6_string">9:42 AM</string>
    <string name="so_06_13_20_27_string">So06132027</string>
    <string name="sa_05_12_19_26_string">Sa05121926</string>
    <string name="fr_04_11_18_25_string">Fr04111825</string>
    <string name="do_03_10_17_24_string">Do03101724</string>
    <string name="mi_02_09_16_23_string">Mi02091623</string>
    <string name="di_01_08_15_22_string">Di01081522</string>
    <string name="mo_07_14_21_28_string">Mo07142128</string>
    <string name="februar_2022_string">Februar 2022</string>
    <string name="aktiver_tag_string">aktiver Tag</string>
    <string name="akuter_schub_string">akuter Schub</string>
    <string name="_47_8__string">47,8%</string>
    <string name="_11_aktive_tage__von_23___das_sind_fast_50___weiter_so__ek1_string">Es ist ein herrlicher {}! Was möchtest Du nun tun?</string>
    <string name="_11_aktive_tage__von_23___das_sind_fast_50___weiter_so__ek3_string">Schon <b>{}</b> aktive Tage in diesem Monat! Das sind []%, weiter so!</string>
    <string name="statistiken_anzeigen_string">Statistiken anzeigen</string>
    <string name="akuten_schub_tracken_string">Schub/Pause tracken</string>
    <string name="aktivit_t_durchf_hren_string">Aktivität durchführen</string>
    <string name="chat_ek1_string">CHAT</string>
    <string name="schritte_heute__1253_von_1500_string">Schritte heute: {} von []</string>
    <string name="figma_ek7_string">Figma</string>
    <string name="_42__ek7_string">42%</string>
    <string name="_9_42_am_ek7_string">9:42 AM</string>
    <string name="so_06_13_20_27_ek1_string">So06132027</string>
    <string name="sa_05_12_19_26_ek1_string">Sa05121926</string>
    <string name="fr_04_11_18_25_ek1_string">Fr04111825</string>
    <string name="do_03_10_17_24_ek1_string">Do03101724</string>
    <string name="mi_02_09_16_23_ek1_string">Mi02091623</string>
    <string name="di_01_08_15_22_ek1_string">Di01081522</string>
    <string name="mo_07_14_21_28_ek1_string">Mo07142128</string>
    <string name="februar_2022_ek1_string">Februar 2022</string>
    <string name="aktiver_tag_ek1_string">aktiver Tag</string>
    <string name="akuter_schub_ek1_string">akuter Schub</string>
    <string name="chat_ek2_string">CHAT</string>
    <string name="aktivit_t_durchf_hren_ek1_string">Aktivitt durchfhren</string>
    <string name="akuten_schub_tracken_ek1_string">Akuten Schubtracken</string>
    <string name="statistiken_anzeigen_ek1_string">Statistiken anzeigen</string>
    <string name="_11_aktive_tage__von_23___das_sind_fast_50___weiter_so__ek5_string">Was mchtest Du nun tun?</string>
    <string name="_47_8__ek1_string">47,8%</string>
    <string name="_11_aktive_tage__von_23___das_sind_fast_50___weiter_so__ek6_string">11 aktive Tage (von 23)! Das sind fast 50%, weiter so!</string>
    <string name="register_ek1_string">Besttigen</string>
    <string name="start__string">Start:</string>
    <string name="ende__string">Ende: </string>
    <string name="akuten_schub_tracken_ek2_string">Akuten Schub tracken</string>
    <string name="figma_ek8_string">Figma</string>
    <string name="_42__ek8_string">42%</string>
    <string name="_9_42_am_ek8_string">9:42 AM</string>
    <string name="_100__string">100%</string>
    <string name="_50__string">50%</string>
    <string name="_0__string">0%</string>
    <string name="aug_string">Aug</string>
    <string name="jul_string">Jul</string>
    <string name="jun_string">Jun</string>
    <string name="mai_string">Mai</string>
    <string name="apr_string">Apr</string>
    <string name="m_r_string">Mr</string>
    <string name="feb_string">Feb</string>
    <string name="j_n_string">Jn</string>
    <string name="verlauf_aktiver_tage_string">Verlauf aktiver Tage</string>
    <string name="krafttraining_string">Krafttraining</string>
    <string name="ausdauertraining_string">Ausdauertraining</string>
    <string name="_100__ek1_string">100%</string>
    <string name="_50__ek1_string">50%</string>
    <string name="_0__ek1_string">0%</string>
    <string name="aug_ek1_string">Aug</string>
    <string name="jul_ek1_string">Jul</string>
    <string name="jun_ek1_string">Jun</string>
    <string name="mai_ek1_string">Mai</string>
    <string name="apr_ek1_string">Apr</string>
    <string name="m_r_ek1_string">Mr</string>
    <string name="feb_ek1_string">Feb</string>
    <string name="j_n_ek1_string">Jn</string>
    <string name="trainingszusammensetzung_string">Trainingszusammensetzung</string>
    <string name="text_string"></string>
    <string name="die_trainingszeit_liegt_in_dem_derzeit_f_r_dich_optimalen_bereich_zwischen_10_und_20_minuten__string">Die Trainingszeit liegt in demderzeit fr Dich optimalen Bereich zwischen 10 und 20 Minuten.</string>
    <string name="die_trainingszeit_liegt_in_dem_derzeit_f_r_dich_optimalen_bereich_zwischen_10_und_20_minuten__ek1_string">Idealerweise solltest Du allebungen durchfhren. Bitte sprich mit Deinem Therapeuten ber Neue.</string>
    <string name="http___www_mysports_at_training_string">http://www.mysports.at/training</string>
    <string name="mysports___webansicht_string">MySports - Webansicht</string>
    <string name="klienten_string">Klienten</string>
    <string name="training_string">Training</string>
    <string name="einstellungen_string">Einstellungen</string>
    <string name="die_trainingsession_ist_f_r_mich_ganz_angenehm_und_gut_zu_schaffen__aber_das_planking_ist_wirklich_nicht_meins__meine_arme_geben_in_der_mitte_einfach_nach__bevor_ich_mir_wehtue_lasse_ich_die__bung_lieber__vielleicht_k_nnen_wir_das_anpassen__string">Die Trainingsession ist fr mich ganz angenehm und gut zu schaffen, aber das Planking ist wirklichnicht meins. Meine Arme geben in der Mitte einfach nach, bevor ich mir wehtue lasse ich die bunglieber. Vielleicht knnen wir das anpassen.</string>
    <string name="textuelles_feedback__string">Textuelles Feedback:</string>
    <string name="_35_00___45_00_minuten_string">35:00 - 45:00 Minuten</string>
    <string name="_45___55_string">45 : 55</string>
    <string name="derzeit_empfohlene_dauer__string">Derzeit empfohlene Dauer: </string>
    <string name="derzeit_kraft___ausdauer__string">Derzeit Kraft : Ausdauer:</string>
    <string name="petra_mayer_string">Petra Mayer</string>
    <string name="feedback_des_klienten__string">Feedback des Klienten:        </string>
    <string name="dauer_ek1_string">Dauer   </string>
    <string name="intensit_t_ek1_string">Intensitt  </string>
    <string name="_bersprungene__bungen__string">bersprungene bungen:    </string>
    <string name="trainingsdauer__string">Trainingsdauer:                     </string>
    <string name="_40_23_minuten_string">40:23 Minuten</string>
    <string name="edss__string">EDSS:  </string>
    <string name="_5_0_string">5.0</string>
    <string name="klient__string">Klient:  </string>
    <string name="franziska_hat_am_01__september_2022_eine_aktivit_t__kraft__in_13_25_abgeschlossen__string">Franziska hat am 01. September 2022 eine Aktivitt (Kraft) in 13:25 abgeschlossen.</string>
    <string name="aktivit_ten_string">Aktivitten</string>
    <string name="michael_hat_am_04__september_2022_eine_aktivit_t__ausdauer__in_25_45_abgeschlossen__string">Michael hat am 04. September 2022 eine Aktivitt (Ausdauer) in 25:45 abgeschlossen.</string>
    <string name="petra_hat_am_03__september_2022_eine_aktivit_t__ausdauer__in_40_23_abgeschlossen__string">Petra hat am 03. September 2022 eine Aktivitt (Ausdauer) in 40:23 abgeschlossen.</string>
    <string name="background_image">background_image</string>
    <string name="settings">settings</string>
    <string name="exercise">exercise</string>
    <string name="statistics">statistics</string>
    <string name="home">home</string>
    <string name="game">game</string>
    <string name="zur_ck">Zurück</string>
    <string name="speichern">Speichern</string>
    <string name="pause">Pause</string>
    <string name="beenden">Beenden</string>
    <string name="von">von empfohlenen</string>
    <string name="information">Versuche, die Übungen so lange durchzuführen, bis die empfohlene Dauer erreicht ist. Wird es Dir zu viel, kannst Du mittels des PAUSE-Buttons jederzeit Pausen einlegen. Möchtest Du das Training beenden, so kannst Du dies mittels des BEENDEN-Buttons tun.</string>
    <string name="verlauf_aktiver_tage">Verlauf aktiver Tage</string>
    <string name="trainingszusammensetzung">Trainingszusammensetzung</string>
</resources>