<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--
    /*
     *	This content is generated from the API File Info.
     *	(Alt+Shift+Ctrl+I).
     *
     *	@desc
     *	@file 		log_in_page
     *	@date 		Saturday 01st of October 2022 02:28:35 PM
     *	@title 		Page 1
     *	@author
     *	@keywords
     *	@generator 	Export Kit v1.3.figma
     *
     */
    -->

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/background_image"
        android:scaleType="fitXY"
        android:src="@drawable/background_image" />

    <RelativeLayout
        android:id="@+id/menu_bar_ek10"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/whiteOP">

        <ImageView
            android:id="@+id/vector_ek123"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="40dp"
            android:layout_toStartOf="@id/vector_ek125"
            android:contentDescription="@string/settings"
            android:src="@drawable/vector_ek123" />

        <ImageView
            android:id="@+id/vector_ek127"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@id/vector_ek131"
            android:contentDescription="@string/exercise"
            android:src="@drawable/vector_ek127" />

        <ImageView
            android:id="@+id/vector_ek129"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@id/vector_ek127"
            android:contentDescription="@string/statistics"
            android:src="@drawable/vector_ek129"
            android:alpha="0.5"
            />

        <ImageView
            android:id="@+id/vector_ek131"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/home"
            android:src="@drawable/vector_ek131" />

        <ImageView
            android:id="@+id/vector_ek125"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="40dp"
            android:layout_toStartOf="@id/vector_ek131"
            android:contentDescription="@string/game"
            android:src="@drawable/vector_ek125" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/title_layout">

            <ImageView
                android:id="@+id/back1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@id/title"
                android:src="@drawable/back"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/verlauf_aktiver_tage"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <ImageView
                android:id="@+id/front1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/title"
                android:src="@drawable/front"/>
        </RelativeLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/linechart"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:layout_below="@id/title_layout"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/first"
        android:layout_marginTop="40dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/title1_layout">

            <ImageView
                android:id="@+id/back2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@id/title1"
                android:src="@drawable/back"/>

            <TextView
                android:id="@+id/title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/trainingszusammensetzung"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <ImageView
                android:id="@+id/front2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/title1"
                android:src="@drawable/front"/>
        </RelativeLayout>

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barchart"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:layout_below="@id/title1_layout"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>


</RelativeLayout>