<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--
    /*
     *	This content is generated from the API File Info.
     *	(Alt+Shift+Ctrl+I).
     *
     *	@desc
     *	@file 		log_in_page
     *	@date 		Saturday 01st of October 2022 02:28:35 PM
     *	@title 		Page 1
     *	@author
     *	@keywords
     *	@generator 	Export Kit v1.3.figma
     *
     */
    -->

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/background_image"
        android:scaleType="fitXY"
        android:src="@drawable/background_image" />

    <RelativeLayout
        android:id="@+id/video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp">

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/video"
        android:layout_marginStart="25dp"
        android:layout_marginTop="110dp">

        <TextView
            android:id="@+id/actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="00:00" />


        <TextView
            android:id="@+id/between"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/actual"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/von" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/between"
            android:fontFamily="@font/montserrat_bold"
            android:text="00:00" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/video"
        android:layout_marginTop="150dp">

        <Button
            android:id="@+id/end"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:background="@drawable/rectangle_2_shape"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/beenden"
            android:textColor="@color/log_in_color"
            android:textStyle="bold" />

        <Button
            android:id="@+id/pause"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/end"
            android:background="@drawable/rectangle_2_shape"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/pause"
            android:textColor="@color/log_in_color"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttons"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/information" />


</RelativeLayout>