<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dateTo"
                android:layout_marginTop="20dp"
                android:id="@+id/buttons">

                <Button
                    android:id="@+id/messageButtonBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_2_shape"
                    android:text="@string/zur_ck"
                    android:textColor="@color/log_in_color"
                    android:layout_alignParentStart="true"/>


                <Button
                    android:id="@+id/messageButtonOK"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@id/messageButtonBack"
                    android:background="@drawable/rectangle_2_shape"
                    android:text="@string/speichern"
                    android:textColor="@color/log_in_color"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/error_field_schub"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/buttons"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@color/rectangle_50_color" />

            <TextView
                android:id="@+id/titleText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/whiteOP"
                android:padding="10dp"
                android:textColor="@color/rectangle_2_color"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dateFrom"
                android:fontFamily="@font/montserrat_regular"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_below="@id/titleText1"
                android:hint="@string/date_from_hint"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dateTo"
                android:fontFamily="@font/montserrat_regular"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_below="@id/dateFrom"
                android:hint="@string/date_end_hint"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>